<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAAAFF"
    android:hapticFeedbackEnabled="false"
    tools:context=".fragments.ButprinFragment">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/btnsett"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/config" />

    <Button
        android:id="@+id/btnlist"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="10dp"
        android:text="@string/lista" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="10dp"
        android:text="@string/a_adir" />
</FrameLayout>