<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#999999"
    android:orientation="vertical"
    tools:context=".Addmod">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/Texttitulo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/nombre"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="bottom|left"
            android:hint="@string/t_tulo_del_juego"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Plataforma: "
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spnplatfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/en_posesi_n"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <RadioButton
                    android:id="@+id/rbtnposi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="40dp"
                    android:text="@string/si"
                    android:onClick="checkButton"/>

                <RadioButton
                    android:id="@+id/rbtnposno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:paddingRight="40dp"
                    android:text="@string/no"
                    android:onClick="checkButton"/>
            </RadioGroup>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Nuevo"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <RadioButton
                android:id="@+id/rbtnnuev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="40dp"
                android:text="@string/si"
                android:onClick="checkButton"/>

            <RadioButton
                android:id="@+id/rbtnusad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:paddingRight="40dp"
                android:text="@string/no"
                android:onClick="checkButton"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/avance_grado"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/spnavan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/n_veces_pasado"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtveces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btncanceladd"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnokadd"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/ok" />

    </LinearLayout>


</LinearLayout>