<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/inputitotito"
            android:layout_width="394dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@null"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/seguro_que_desea_borrar_el_siguiente_juego"
            android:textAlignment="center"
            android:textColor="#000"
            android:inputType="" />

        <TextView
            android:id="@+id/juegorradotxt"
            android:layout_width="392dp"
            android:layout_height="45dp"
            android:layout_below="@+id/inputitotito"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#C70000" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="391dp"
            android:layout_height="1dp"
            android:layout_below="@+id/juegorradotxt"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:background="#0000FF"
            android:text="@string/textview" />

        <Button
            android:id="@+id/btnsiborr"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="126dp"
            android:layout_marginRight="126dp"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:text="@string/borrar"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/btnoborr"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/cancelar" />

    </RelativeLayout>

</RelativeLayout>